--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@
 
 name: df_string
 description: A package designed to extend Dart strings by offering additional functionality.
-version: 0.2.3
-repository: https://github.com/robmllze/df_string
+version: 0.2.4
+repository: https://github.com/DevCetra/df_string
 funding:
   - https://www.buymeacoffee.com/robmllze
 topics:
