--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,12 @@
 ##.title~
 
 name: df_string
-description: A package designed to extend Dart strings by offering additional functionality.
-version: 0.2.4
-repository: https://github.com/dev-cetera/df_string
+homepage: https://dev-cetera.com/
+repository: https://github.com/robmllze/df_string
 funding:
   - https://www.buymeacoffee.com/dev_cetera
+description: A package designed to extend Dart strings by offering additional functionality.
+version: 0.2.4
 topics:
   - dart
   - json
@@ -32,3 +33,4 @@ environment:
 
 dev_dependencies:
   lints: ^6.0.0
+
