--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ repository: https://github.com/robmllze/df_string
 funding:
   - https://www.buymeacoffee.com/dev_cetera
 description: A package designed to extend Dart strings by offering additional functionality.
-version: 0.2.4
+version: 0.2.5
 topics:
   - dart
   - json
@@ -33,4 +33,5 @@ environment:
 
 dev_dependencies:
   lints: ^6.0.0
+  test: ^1.25.0
 
